# dl-manager

./: .codecov.yml  .coveragerc  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-dl-manager-push-tag-shared.yaml  ci.yaml
datalake_manager/: __init__.py  config.py  manager_interface.py  redshift_manager.py
datalake_manager/clients/: redshift_client.py  tests.py
datalake_manager/server/: __init__.py  interceptors.py  msgs_pb2_grpc.py  server.py
datalake_manager/server/proto/: message_templates.proto  msgs_pb2.py  msgs_pb2_grpc.py  traces.proto  traces_pb2.py  traces_pb2_grpc.py
datalake_manager/server/proto/commerce_webhook/: commerce_webhook.proto  commerce_webhook_pb2.py  commerce_webhook_pb2_grpc.py
datalake_manager/server/proto/events/: events.proto  events_pb2.py  events_pb2_grpc.py
datalake_manager/server/proto/message_template/: message_templates.proto  message_templates_pb2.py  message_templates_pb2_grpc.py
datalake_manager/server/proto/msgs/: msgs.proto  msgs_pb2.py  msgs_pb2_grpc.py
datalake_manager/server/proto/traces/: traces_pb2.py  traces_pb2_grpc.py
datalake_manager/tests/: test_redshift_client.py  test_redshift_manager.py  test_server.py
docker/: Dockerfile  start
