[tool.poetry]
name = "datalake_manager"
version = "0.1.0"
description = "Manage acess to data lake"
authors = ["Lucas Linhares <lucas.linhares@vtex.com>"]
readme = "README.md"
packages = [{include = "datalake_manager"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
grpcio-health-checking = "^1.71.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
requests-mock = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
(
  .*_pb2\.py
  | .*_pb2_grpc\.py
)
'''
